Changed Whole_TF_relaynet names, did training

--- a/Resize_Whole_Data.ipynb
+++ b/Resize_Whole_Data.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import scipy.io as scio\n",
@@ -32,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Applying Weighting algorithm to an image\n",
@@ -52,7 +56,7 @@
     "            elif(image[j][k] == 2): # blue - endocardium\n",
     "                 w2 = 10 * value\n",
     "            elif(image[j][k]== 3): # purple - fibrosis\n",
-    "                 w2 = 5 * value\n",
+    "                 w2 = 5 * value # Change this to 2 as it was overcompensating before\n",
     "            elif(image[j][k] == 4): # green - fat\n",
     "                 w2 = 10 * value\n",
     "            elif(image[j][k]== 5): # orange - dense collagen\n",
@@ -88,7 +92,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 0 black\n",
@@ -104,7 +110,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Setting the directories\n",
@@ -129,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "whole_raw_image_folder = cwd + 'whole_raw_image/'\n",
@@ -166,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "print(files_list[0])"
@@ -175,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Creating list of file names\n",
@@ -193,7 +207,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Removing Unwanted Files\n",
@@ -226,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "print(len(unwanted_files))\n",
@@ -244,7 +262,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def segment_image_multiple(image, left_bound, right_bound, split):\n",
@@ -273,20 +293,21 @@
     "whole_raw_1 = plt.imread(whole_raw_image_folder+files_list[0][0])\n",
     "segmented_whole = segment_image_multiple(whole_raw_1, 0, 600, 64)\n",
     "\n",
-    "for i in segmented_whole:\n",
-    "    plt.imshow(i)"
+    "plt.imshow(segmented_whole[2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Saving images\n",
     "def crop_and_save_raw(image, src_direct, name):\n",
     "    dst_drc = src_direct + 'Train/'\n",
-    "    image[440:,:] = 0\n",
+    "    \n",
     "    # Crop all images\n",
     "    if len(image.shape) == 2:\n",
     "        height, width = image.shape\n",
@@ -328,7 +349,7 @@
     "        label = np.concatenate((label, id_full))\n",
     "    \n",
     "    rgb_image = convert_to_rgb_image(label) \n",
-    "    plt.imshow(rgb_image)\n",
+    "#     plt.imshow(rgb_image)\n",
     "#     segmented_labels = segment_image(label, 0, 600, 64)\n",
     "    segmented_labels = segment_image_multiple(label, 0, 600, 64)\n",
     "    \n",
@@ -374,7 +395,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def remove_files(mydir, ext):\n",
@@ -383,7 +406,7 @@
     "        os.remove(os.path.join(mydir, f))\n",
     "remove = True\n",
     "if remove:\n",
-    "#     whole_raw_image_folder_rem = whole_raw_image_folder + 'Train/'\n",
+    "    whole_raw_image_folder_rem = whole_raw_image_folder + 'Train/'\n",
     "#     brushlet_enhanced_folder_rem = brushlet_enhanced_folder +'Train/'\n",
     "#     brushlet_denoised_folder_rem = brushlet_denoised_folder+'Train/'\n",
     "#     manual_label_folder_rem = manual_label_folder+'Train/'\n",
@@ -399,7 +422,7 @@
     "    \n",
     "    normalised_folder_rem = normalised_folder + 'Train/'\n",
     "    \n",
-    "#     remove_files(whole_raw_image_folder_rem, '.png')\n",
+    "    remove_files(whole_raw_image_folder_rem, '.png')\n",
     "#     remove_files(brushlet_enhanced_folder_rem, '.png')\n",
     "#     remove_files(brushlet_denoised_folder_rem, '.png')\n",
     "#     remove_files(manual_label_folder_rem, '.png')\n",
@@ -415,7 +438,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# The values of the conversion by Elsa\n",
@@ -425,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Extensions\n",
@@ -439,7 +466,6 @@
     "# Loop through images to determine whether their weights and they are looking correct\n",
     "l_values = set()\n",
     "for i in range(len(files_list[0])):\n",
-    "# for i in range(20, len(files_list[0])):\n",
     "    # choosing files I don't like\n",
     "    if i not in unwanted_files:\n",
     "        print(i)\n",
@@ -484,7 +510,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(files_list[0][54])"
@@ -494,6 +522,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -536,7 +565,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -547,7 +578,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "files = list_all_files(whole_raw_image_folder+'Train/')\n",
@@ -560,7 +593,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# atrium_ids = all_labels_folder+'Train/segmented_ids/'\n",
@@ -583,7 +618,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load h5py raw array\n",
@@ -617,7 +654,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -646,7 +685,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Creating label.h5 File\n",
@@ -688,7 +729,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Creating set.h5 File\n",
@@ -717,7 +760,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# N = 50"
@@ -726,7 +771,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import torch\n",
@@ -755,7 +802,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# # Creating label.h5 File\n",
@@ -798,7 +847,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# # Creating set.h5 File\n",
@@ -814,7 +865,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (py3)",
+   "display_name": "Python (torch)",
    "language": "python",
    "name": "py3"
   },
