--- a/Normalise.ipynb
+++ b/Normalise.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import scipy.io as scio\n",
@@ -39,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import skimage.restoration as sr\n",
@@ -63,7 +67,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Setting the directories\n",
@@ -82,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "current_folder = cwd + 'whole_raw_image/'\n",
@@ -98,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def list_all_files(directory):\n",
@@ -112,7 +122,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filenames = list_all_files(current_folder)\n",
@@ -122,7 +134,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# unwanted_files = ['con_H1_N01848_LV_1_194.tif','con_H1_N01848_LV_1_300.tif','con_H2_N02047_LVS_1_400.tif','con_H2_N02047_LVS_1_420.tif','con_H3_N02186_LVS_1_265.tif','con_H3_N02186_RV_1_270.tif','con_H3_N02186_RV_1_400.tif','con_H4_N03210_LV_1_400.tif','con_H4_N03210_RV_1_390.tif','con_H4_N03210_RV_1_400.tif','con_H5_N03290_LV_1_420.tif','con_H6_N03320_LVS_1_455.tif','con_H6_N03320_LV_1_404.tif','con_H6_N03320_RA_1_420.tif','con_H8_N03585_RA_1_345.tif']\n",
@@ -132,7 +146,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_info(filenames, root, ext):\n",
@@ -159,7 +175,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "raw_images = get_info(filenames, current_folder, '.tif')\n",
@@ -169,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(len(raw_images))\n",
@@ -180,7 +200,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(cwd)"
@@ -189,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mean_image = np.mean(raw_images, axis=0)\n",
@@ -202,7 +226,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.imshow(raw_images[0])"
@@ -211,7 +237,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "normalisedimages = []\n",
@@ -223,7 +251,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(cwd)"
@@ -232,7 +262,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for item in range(len(normalised_images)):\n",
@@ -246,14 +278,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (py3)",
+   "display_name": "Python (torch)",
    "language": "python",
    "name": "py3"
   },
