Creaetd scores file

--- a/test_whole_image.ipynb
+++ b/test_whole_image.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.io as scio\n",
@@ -36,9 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import skimage.restoration as sr\n",
@@ -62,9 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import keras\n",
@@ -87,188 +81,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_info(filenames, root, ext):\n",
-    "    images = []\n",
-    "    for filename in filenames :\n",
-    "        filepath = os.path.join(root,filename)\n",
-    "        if ext == '.npy':\n",
-    "            image = np.load(filepath)\n",
-    "            h,w = image.shape\n",
-    "            if h != 512 or w != 64:\n",
-    "                amount = 512 - h\n",
-    "                id_full = np.full((amount, 64), 0)\n",
-    "                try:\n",
-    "                    image = np.concatenate((image, id_full))\n",
-    "                except Exception as e:\n",
-    "                    print(image.shape)\n",
-    "        elif ext == '.JPG' or ext == '.tif' or ext =='.png':\n",
-    "            image = ndimage.imread(filepath)\n",
-    "        images.append(image)\n",
-    "    return images\n",
-    "\n",
-    "def get_data(directory,ext):\n",
-    "    from os import listdir\n",
-    "    from os.path import isfile, join\n",
-    "    \n",
-    "    root_path = \"\"\n",
-    "    filenames = [f for f in listdir(directory) if isfile(join(directory, f)) and f != '.DS_Store']\n",
-    "    filenames = sorted(filenames)\n",
-    "    return filenames, get_info(filenames, directory, ext)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Folder For Training Files"
+    "### Creating Architecture"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Setting the directories\n",
-    "import os\n",
-    "\n",
-    "wanted_folder = 'alldata/'\n",
-    "# wanted_folder = 'pruned/'\n",
-    "# wanted_folder = 'Atrium/'\n",
-    "# wanted_folder = 'Ventricle/'\n",
-    "\n",
-    "cwd = os.getcwd()\n",
-    "check_directory = cwd\n",
-    "if check_directory == '/home/sim/notebooks/relaynet_pytorch':\n",
-    "    cwd = cwd + '/datasets/OCTData/'+wanted_folder\n",
-    "elif check_directory == '/Users/sim/Desktop/Imperial/Project/PreTrained/relaynet_pytorch':\n",
-    "    cwd = cwd + '/datasets-24-aug/OCTData/'+wanted_folder\n",
-    "\n",
-    "print(cwd)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "#### Raw Files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "whole_raw_image_folder = cwd + 'whole_raw_image/'\n",
-    "print(whole_raw_image_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "filenames, raw_images = get_data(whole_raw_image_folder, '.tif')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print(len(filenames))\n",
-    "print (len(raw_images))\n",
-    "label = raw_images[0]\n",
-    "label[440:,:] = 0\n",
-    "plt.imshow(raw_images[0], cmap='gray')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "manual_label_folder = cwd + 'manual_label/'\n",
-    "_, manual_labels = get_data(manual_label_folder,'.JPG')\n",
-    "print(filenames[0])\n",
-    "print(manual_labels[0].dtype)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "f, axs = plt.subplots(1,2,figsize=(20,20))\n",
-    "plt.subplot(121), plt.imshow(raw_images[0], cmap = \"gray\")\n",
-    "plt.title('Raw OCT Image'), plt.xticks([]), plt.yticks([])\n",
-    "plt.subplot(122), plt.imshow(manual_labels[0])\n",
-    "plt.title('Manually Labelled Image'), plt.xticks([]), plt.yticks([])\n",
-    "# plt.subplot(133),plt.imshow(output)\n",
-    "# plt.title('Automated Label'), plt.xticks([]), plt.yticks([])\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "ids_folder = cwd + 'png_labels_method/'\n",
-    "_, ids = get_data(ids_folder,'.png')\n",
-    "\n",
-    "print (len(ids))\n",
-    "print(ids[0].dtype)\n",
-    "plt.imshow(ids[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "h,w = 512, 600\n",
@@ -321,11 +143,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loss Functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def dice_coef(y_true, y_pred):\n",
@@ -342,9 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def dice_coef_loss(y_true, y_pred):\n",
@@ -354,9 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def customized_loss(y_true,y_pred):\n",
@@ -368,9 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "smooth = 1"
@@ -379,9 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lrs = [0.01]\n",
@@ -393,25 +212,146 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting Directory"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting the directories\n",
+    "import os\n",
+    "\n",
+    "wanted_folder = 'alldata/'\n",
+    "# wanted_folder = 'pruned/'\n",
+    "# wanted_folder = 'Atrium/'\n",
+    "# wanted_folder = 'Ventricle/'\n",
+    "\n",
+    "cwd = os.getcwd()\n",
+    "check_directory = cwd\n",
+    "if check_directory == '/home/sim/notebooks/relaynet_pytorch':\n",
+    "    cwd = cwd + '/datasets/OCTData/'+wanted_folder\n",
+    "elif check_directory == '/Users/sim/Desktop/Imperial/Project/PreTrained/relaynet_pytorch':\n",
+    "    cwd = cwd + '/datasets-24-aug/OCTData/'+wanted_folder\n",
+    "\n",
+    "print(cwd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Raw Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "whole_raw_image_folder = cwd + 'whole_raw_image/'\n",
+    "print(whole_raw_image_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filenames, raw_images = get_data(whole_raw_image_folder, '.tif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(filenames))\n",
+    "print (len(raw_images))\n",
+    "label = raw_images[0]\n",
+    "plt.imshow(raw_images[0], cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "manual_label_folder = cwd + 'manual_label/'\n",
+    "_, manual_labels = get_data(manual_label_folder,'.JPG')\n",
+    "print(filenames[0])\n",
+    "print(manual_labels[0].dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, axs = plt.subplots(1,2,figsize=(20,20))\n",
+    "plt.subplot(121), plt.imshow(raw_images[0], cmap = \"gray\")\n",
+    "plt.title('Raw OCT Image'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(122), plt.imshow(manual_labels[0])\n",
+    "plt.title('Manually Labelled Image'), plt.xticks([]), plt.yticks([])\n",
+    "# plt.subplot(133),plt.imshow(output)\n",
+    "# plt.title('Automated Label'), plt.xticks([]), plt.yticks([])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids_folder = cwd + 'png_labels_method/'\n",
+    "_, ids = get_data(ids_folder,'.png')\n",
+    "\n",
+    "print (len(ids))\n",
+    "print(ids[0].dtype)\n",
+    "plt.imshow(ids[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# model.load_weights(\"/home/sim/notebooks/relaynet_pytorch/\"+saved_name+\".hdf5\")\n",
     "# saved_name = 'notnormalised_bs50_ep_500_01'\n",
-    "saved_name = 'weightingval1_normalised_atriumventriclesubract_bs40_ep_200'\n",
+    "saved_name = 'normalised_bs_40_ep_200'\n",
     "model.load_weights(check_directory+\"/models/Normalised/\"+saved_name+\".hdf5\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "(15*600)/60"
@@ -420,9 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# def one_hot_encode(inp, num_classes):\n",
@@ -442,9 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "overall_stats = []\n",
@@ -471,7 +407,7 @@
     "\n",
     "    for i in range(h):\n",
     "        for j in range(w):\n",
-    "            index = np.argmax(prediction[i][j]) # doing pixel wise prediction\n",
+    "            index = np.argmax(prediction[i][j]) # doing pixel wise prediction based on highest prob of class\n",
     "            predicted_id[i][j] = index\n",
     "#     idx = np.asarray(ids[0])\n",
     "#     print(idx.shape)\n",
@@ -499,7 +435,7 @@
     "    \n",
     "    \n",
     "    \n",
-    "    # color = label_img_to_rgb(predicted_id) \n",
+    "    color = label_img_to_rgb(predicted_id) \n",
     "    \n",
     "    \n",
     "#     f, axs = plt.subplots(1,3,figsize=(20,20))\n",
@@ -522,9 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# for i in range(len(overall_stats)):\n",
@@ -538,9 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "f, axs = plt.subplots(1,3,figsize=(20,20))\n",
@@ -556,9 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# for i in range(15,16):\n",
@@ -594,7 +524,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (torch)",
+   "display_name": "Python (py3)",
    "language": "python",
    "name": "py3"
   },
