--- a/Normalise.ipynb
+++ b/Normalise.ipynb
@@ -287,7 +287,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (torch)",
+   "display_name": "Python (py3)",
    "language": "python",
    "name": "py3"
   },
