Minor changes to scoring

--- a/scores.ipynb
+++ b/scores.ipynb
@@ -181,11 +181,11 @@
    "outputs": [],
    "source": [
     "# chosen_result = np.load(results_folder + 'tf_nonnormalised_raw.npy')\n",
-    "# chosen_result = np.load(results_folder + 'tf_normalised.npy')\n",
+    "chosen_result = np.load(results_folder + 'tf_normalised.npy')\n",
     "# chosen_result = np.load(results_folder + 'tf_atrven_normalised.npy')\n",
     "# chosen_result = np.load(results_folder + 'torch_nonnormalised_raw.npy')\n",
     "# chosen_result = np.load(results_folder + 'torch_normalised.npy')\n",
-    "chosen_result = np.load(results_folder + 'torch_atrven_normalised.npy')\n",
+    "# chosen_result = np.load(results_folder + 'torch_atrven_normalised.npy')\n",
     "\n",
     "print(chosen_result.shape)\n",
     "\n",
@@ -243,7 +243,7 @@
     "layers = ['Void - Black', 'Myocardium - Red', 'Endocardium - Blue', 'Fibrosis - Purple', 'Fat - Green', 'Dense Collagen - Orange', 'Loose Collagen - Yellow', 'Smooth Muscle - Pink']\n",
     "\n",
     "def get_layer_stats(input_list):\n",
-    "    averages = []\n",
+    "    averages = [0]\n",
     "    for i in range(1,8):\n",
     "    #     ii = np.isfinite(overall_stats[:,i])\n",
     "        ii = input_list[:,i] > 0.001\n",
@@ -252,6 +252,7 @@
     "            best_val = np.argmax(new_stats)\n",
     "            print('Best_val is at index: ', best_val)\n",
     "        val = round(np.average(new_stats),3)\n",
+    "        print(val)\n",
     "        averages.append(val)\n",
     "        print('Label: {} {}, Average Score: {}'.format(i, layers[i],averages[i]))\n",
     "    print('Average Scores', np.around(averages,3))\n",
