Changed weighting formula,  added new model results

--- a/Resize_Whole_Data.ipynb
+++ b/Resize_Whole_Data.ipynb
@@ -56,15 +56,15 @@
     "            elif(image[j][k] == 2): # blue - endocardium\n",
     "                 w2 = 10 * value\n",
     "            elif(image[j][k]== 3): # purple - fibrosis\n",
-    "                 w2 = 5 * value # Change this to 2 as it was overcompensating before\n",
+    "                 w2 = 5 * value \n",
     "            elif(image[j][k] == 4): # green - fat\n",
-    "                 w2 = 10 * value\n",
+    "                 w2 = 11 * value\n",
     "            elif(image[j][k]== 5): # orange - dense collagen\n",
     "                 w2 = 5 * value\n",
     "            elif(image[j][k]== 6): # yellow - loose collagen\n",
     "                 w2 = 5 * value\n",
     "            elif(image[j][k]== 7):\n",
-    "                 w2 = 5 * value # magenta - smooth muscle\n",
+    "                 w2 = 8 * value # magenta - smooth muscle\n",
     "            else:\n",
     "                 w2 = 0\n",
     "            if(j!=0 and j!=x-1):\n",
@@ -119,8 +119,8 @@
     "import os\n",
     "\n",
     "\n",
-    "wanted_folder = 'alldata/'\n",
-    "# wanted_folder = 'pruned/'\n",
+    "# wanted_folder = 'alldata/'\n",
+    "wanted_folder = 'pruned/'\n",
     "# wanted_folder = 'Atrium/'\n",
     "# wanted_folder = 'Ventricle/'\n",
     "\n",
@@ -149,8 +149,8 @@
     "all_labels_folder = cwd + 'all_labels/'\n",
     "sim_labels_folder = cwd + 'my_labels/'\n",
     "corrected_labels_folder = cwd + 'png_labels_method/'\n",
-    "# normalised_folder = cwd + 'normalised_raw_image/'\n",
-    "normalised_folder = cwd + 'normalised_raw_2/' # normalising with atrium vs atrium and ventricle vs ventricle\n",
+    "normalised_folder = cwd + 'normalised_raw_image/'\n",
+    "# normalised_folder = cwd + 'normalised_raw_2/' # normalising with atrium vs atrium and ventricle vs ventricle\n",
     "\n",
     "list_of_folders = [whole_raw_image_folder, \\\n",
     "                   brushlet_denoised_folder, \\\n",
@@ -511,11 +511,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "print(files_list[0][54])"
+    "print(files_list[0][15])"
    ]
   },
   {
