--- a/tensorflow_make_predictions.ipynb
+++ b/tensorflow_make_predictions.ipynb
@@ -58,6 +58,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\" \n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
+    "gpu_options = tf.GPUOptions(per_process_gpu_memory_fraction=0.3)\n",
+    "config = tf.ConfigProto()\n",
+    "config.gpu_options.allow_growth=True\n",
+    "\n",
+    "# sess = tf.Session(config=tf.ConfigProto(gpu_options=gpu_options))\n",
+    "\n",
+    "from tensorflow.python.client import device_lib\n",
+    "print(device_lib.list_local_devices())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,11 +193,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "saved_name = 'atrvennormalise_bs_40_ep_200'\n",
+    "saved_name = 'normalised_bs_40_ep_200'\n",
     "model.load_weights(check_directory+\"/models/Normalised/\"+saved_name+\".hdf5\")"
    ]
   },
@@ -190,10 +210,10 @@
    "outputs": [],
    "source": [
     "# filenames, raw_images = get_data(cwd+'whole_raw_image','.tif')\n",
+    "filenames, raw_images = get_data(\"/home/sim/notebooks/relaynet_pytorch/datasets/OCTData/pruned/\"+'normalised_raw_image','.png')\n",
     "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
-    "filenames, raw_images = get_data(cwd+'normalised_raw_2','.png')\n",
     "\n",
-    "save_name = results_folder + '/Normalised/'+ 'tf_' + 'atrven_normalised' + '.npy'\n",
+    "save_name = results_folder + '/Pruned/'+ 'tf_' + 'whole' + '.npy'\n",
     "print(len(raw_images))\n",
     "print (raw_images[0].shape)\n",
     "plt.imshow(raw_images[2],cmap = \"gray\")"
