--- a/torch_make_predictions.ipynb
+++ b/torch_make_predictions.ipynb
@@ -161,11 +161,11 @@
    "outputs": [],
    "source": [
     "# filenames, raw_images = get_data(cwd+'whole_raw_image','.tif')\n",
+    "filenames, raw_images = get_data(\"/home/sim/notebooks/relaynet_pytorch/datasets/OCTData/pruned/\"+'normalised_raw_image','.png')\n",
     "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
-    "filenames, raw_images = get_data(cwd+'normalised_raw_2','.png')\n",
     "\n",
-    "save_name = results_folder + '/Normalised/'+ 'torch_' + 'atrven_normalised' + '.npy'\n",
-    "\n",
+    "save_name = results_folder + '/Pruned/'+ 'torch_' + 'whole' + '.npy'\n",
+    "print(len(raw_images))\n",
     "print (raw_images[0].shape)\n",
     "plt.imshow(raw_images[2],cmap = \"gray\")"
    ]
@@ -190,6 +190,15 @@
     "# plt.imshow(idxs)\n",
     "# plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
